samples/_failures_safe/1761002427_07783e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea364448.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ea364448.c:167:24: error: expected ‘;’ at end of input
  167 |         column = tokens
      |                        ^
      |                        ;
./samples/SAFE/__tmp_ea364448.c:167:9: error: expected declaration or statement at end of input
  167 |         column = tokens
      |         ^~~~~~
./samples/SAFE/__tmp_ea364448.c:167:9: error: expected declaration or statement at end of input
